Enhance typing practice app with mistake tracking and performance metrics

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
             <p id="text"></p>
             <div id="stats">
                 <p class="stat" d id="timer">Time: 60</p>
-                <p class="stat">Mistakes:</p>
-                <p class="stat">WPM: </p>
-                <p class="stat">CPM: </p>
+                <p class="stat" id="mistakes">Mistakes:0</p>
+                <p class="stat" id="WPM">WPM: </p>
+                <p class="stat" id="correctAnswer">CPM: </p>
                 <p id="button">Try Again</p>
 
             </div>
