Initialize WPM and CPM values to 0 in stats display

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
             <div id="stats">
                 <p class="stat" d id="timer">Time: 60</p>
                 <p class="stat" id="mistakes">Mistakes:0</p>
-                <p class="stat" id="WPM">WPM: </p>
-                <p class="stat" id="correctAnswer">CPM: </p>
+                <p class="stat" id="WPM">WPM: 0</p>
+                <p class="stat" id="correctAnswer">CPM: 0</p>
                 <p id="button">Try Again</p>
 
             </div>
